[package]
name = "wsdl-parser-cli"
version = "0.1.0"
authors = [
    "Chris Bruce <chris@lumeo.com>",
    "leonid.krutovsky <leonid.krutovsky@quantumsoft.ru>",
    "DmitrySamoylov <dmitry.samoylov@quantumsoft.ru>",
    "victor-soloviev <victor.soloviev@quantumsoft.ru>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "wsdl-parser"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
roxmltree = { version = "0.14", features = ["std"] }
wsdl-parser = { path = "../wsdl-parser" }
xsd-parser = { path = "../xsd-parser" }
