[package]
name = "wsdl-parser"
version = "0.1.0"
authors = [
    "Chris Bruce <chris@lumeo.com>",
    "leonid.krutovsky <leonid.krutovsky@quantumsoft.ru>",
    "DmitrySamoylov <dmitry.samoylov@quantumsoft.ru>",
    "victor-soloviev <victor.soloviev@quantumsoft.ru>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "wsdl-parser"
path = "src/bin.rs"

[dependencies]
clap = "2.33.3"
Inflector = "0.11.4"
roxmltree = "0.13.0"
xsd-parser = { path = "../xsd-parser" }

[dev-dependencies]
bigdecimal = "0.2.0"
log = "0.4.11"
macro-utils = { path = "../macro-utils" }
num-bigint = "0.3.1"
syn = { version = "1.0.51", features = ["full"] }
text-diff = "0.4.0"
xml-rs = "0.8.3"
xsd-types = { path = "../xsd-types" }
