[package]
name = "wsdl-parser"
version = "0.1.0"
authors = [
    "Chris Bruce <chris@lumeo.com>",
    "leonid.krutovsky <leonid.krutovsky@quantumsoft.ru>",
    "DmitrySamoylov <dmitry.samoylov@quantumsoft.ru>",
    "victor-soloviev <victor.soloviev@quantumsoft.ru>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
Inflector = "0.11.4"
roxmltree = "0.16.0"

[dev-dependencies]
syn = { version = "1.0.58", features = ["full"] }
text-diff = "0.4.0"
xsd-parser = { path = "../xsd-parser" }
