[package]
name = "wsdl-parser"
version = "0.1.0"
authors = [
    "Chris Bruce <chris@lumeo.com>",
    "leonid.krutovsky <leonid.krutovsky@quantumsoft.ru>",
    "DmitrySamoylov <dmitry.samoylov@quantumsoft.ru>",
    "victor-soloviev <victor.soloviev@quantumsoft.ru>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
Inflector = "0.11"
roxmltree = "0.14"

[dev-dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
text-diff = "0.4"
xsd-parser = { path = "../xsd-parser" }
