[package]
name = "xsd-parser"
version = "0.1.0"
authors = [
    "Chris Bruce <chris@lumeo.com>",
    "leonid.krutovsky <leonid.krutovsky@quantumsoft.ru>",
    "DmitrySamoylov <dmitry.samoylov@quantumsoft.ru>",
    "victor-soloviev <victor.soloviev@quantumsoft.ru>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
roxmltree = "0.14.0"
Inflector = "0.11.4"

[dev-dependencies]
bigdecimal = "0.2.0"
itertools = "0.10.0"
log = "0.4.13"
macro-utils = { path = "../macro-utils" }
num-bigint = "0.3.1"
syn = { version = "1.0.58", features = ["full"] }
text-diff = "0.4.0"
xml-rs = "0.8.3"
xsd-types = { path = "../xsd-types" }
yaserde = "0.5.1"
yaserde_derive = "0.5.1"
