[package]
name = "xsd-parser"
version = "0.1.0"
authors = [
    "Chris Bruce <chris@lumeo.com>",
    "leonid.krutovsky <leonid.krutovsky@quantumsoft.ru>",
    "DmitrySamoylov <dmitry.samoylov@quantumsoft.ru>",
    "victor-soloviev <victor.soloviev@quantumsoft.ru>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
Inflector = "0.11.4"
roxmltree = "0.14.0"

[dev-dependencies]
num-bigint = "0.4.2"
syn = { version = "1.0.58", features = ["full"] }
text-diff = "0.4.0"
xml-rs = "0.8.3"
xsd-macro-utils = { path = "../xsd-macro-utils" }
xsd-types = { path = "../xsd-types" }
yaserde = "0.7.1"
yaserde_derive = "0.7.1"
