[package]
name = "xsd-types"
version = "0.1.0"
authors = ["Chris Bruce <chris@lumeo.com>", "leonid.krutovsky <leonid.krutovsky@quantumsoft.ru>", "DmitrySamoylov <dmitry.samoylov@quantumsoft.ru>", "victor-soloviev <victor.soloviev@quantumsoft.ru>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
xml-rs = "0.8.3"
yaserde = "0.5.1"
chrono = "0.4.19"
itertools = "0.9.0"
macro-utils = { path = "../macro-utils" }
num-bigint = "0.3.1"
bigdecimal = "0.2.0"

[dev-dependencies]
yaserde_derive = "0.5.1"
