[package]
name = "xsd-types"
version = "0.1.0"
authors = [
    "Chris Bruce <chris@lumeo.com>",
    "leonid.krutovsky <leonid.krutovsky@quantumsoft.ru>",
    "DmitrySamoylov <dmitry.samoylov@quantumsoft.ru>",
    "victor-soloviev <victor.soloviev@quantumsoft.ru>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bigdecimal = "0.3.0"
chrono = "0.4.19"
num-bigint = "0.4.2"
xml-rs = "0.8.3"
xsd-macro-utils = { path = "../xsd-macro-utils" }
yaserde = "0.8.0"

[dev-dependencies]
yaserde_derive = "0.8.0"
